...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                tools:context=".ui.tv.TVDetailActivity">

                <ImageView
                    android:id="@+id/detail_tv_img"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/content_desc"/>

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_template"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
...
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_title"/>


                <TextView
                    android:id="@+id/tv_detail_first_aired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:text="@string/template_date"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/first_air_text"
...
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/first_air_text"
                    app:layout_constraintTop_toBottomOf="@id/first_air_text"/>

                <TextView
                    android:id="@+id/tv_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_template"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rating_text"
...
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/rating_text"
                    app:layout_constraintTop_toBottomOf="@id/rating_text"/>

                <TextView
                    android:id="@+id/tv_detail_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity_template"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_rating"
                    app:layout_constraintTop_toTopOf="@+id/popularity_text" />
...
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/popularity_text"
                    app:layout_constraintTop_toBottomOf="@id/popularity_text"/>

                <TextView
                    android:id="@+id/tv_detail_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/genre_template"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tv_detail_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_template"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/original_language_text"
                    app:layout_constraintTop_toBottomOf="@id/original_language_text"/>
...
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_language"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_language"/>
                <TextView
                    android:id="@+id/tv_detail_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes_template"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/text_number_of_episodes"
                    app:layout_constraintTop_toBottomOf="@id/text_number_of_episodes"/>
...
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_episodes"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_episodes"/>

                <TextView
                    android:id="@+id/tv_detail_createdby"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/created_by_template"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_createdby"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_createdby"/>

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/detail_company_template"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_company"/>
                <TextView
                    android:id="@+id/tv_detail_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/example_lorem"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
...
