<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/movie_menu"
        android:title="@string/tab_title_movie"
        android:icon="@drawable/ic_movie"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/tvshows_menu"
        android:title="@string/tab_title_tv"
        android:icon="@drawable/ic_tv"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/menu_title_favorites"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>
</menu>